discussion/kv_engine/142940/142940_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Add a constructor from a raw pointer to TaggedPtr.

Otherwise I get the following compilation errors on gcc 10.2.0.

In file included from /usr/include/c++/10.2.0/memory:83,
                 from .../repo-master/kv_engine/engines/ep/src/atomic.h:23,
                 from .../repo-master/kv_engine/engines/ep/src/globaltask.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.h:19,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:18:
/usr/include/c++/10.2.0/bits/unique_ptr.h: In instantiation of ‘std::__uniq_ptr_impl<_Tp, _Dp>::__uniq_ptr_impl(std::__uniq_ptr_impl<_Tp, _Dp>&&) [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>]’:
/usr/include/c++/10.2.0/bits/unique_ptr.h:211:7:   required from here
/usr/include/c++/10.2.0/bits/unique_ptr.h:163:22: error: no match for ‘operator=’ (operand types are ‘std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer’ {aka ‘TaggedPtr<StoredValue>’} and ‘std::nullptr_t’)
  163 |       { __u._M_ptr() = nullptr; }
      |         ~~~~~~~~~~~~~^~~~~~~~~
In file included from .../repo-master/kv_engine/engines/ep/src/blob.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/stored-value.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/hash_table.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:22:
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(const TaggedPtr<StoredValue>&)’
   44 | class TaggedPtr : public TaggedPtrBase {
      |       ^~~~~~~~~
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘const TaggedPtr<StoredValue>&’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(TaggedPtr<StoredValue>&&)’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘TaggedPtr<StoredValue>&&’
In file included from /usr/include/c++/10.2.0/memory:83,
                 from .../repo-master/kv_engine/engines/ep/src/atomic.h:23,
                 from .../repo-master/kv_engine/engines/ep/src/globaltask.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.h:19,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:18:
/usr/include/c++/10.2.0/bits/unique_ptr.h: In instantiation of ‘std::__uniq_ptr_impl<_Tp, _Dp>::pointer std::__uniq_ptr_impl<_Tp, _Dp>::release() [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>; std::__uniq_ptr_impl<_Tp, _Dp>::pointer = TaggedPtr<StoredValue>]’:
/usr/include/c++/10.2.0/bits/unique_ptr.h:167:12:   required from ‘std::__uniq_ptr_impl<_Tp, _Dp>& std::__uniq_ptr_impl<_Tp, _Dp>::operator=(std::__uniq_ptr_impl<_Tp, _Dp>&&) [with _Tp = StoredValue; _Dp = TaggedPtrDeleter<StoredValue, StoredValue::Deleter>]’
/usr/include/c++/10.2.0/bits/unique_ptr.h:212:24:   required from here
/usr/include/c++/10.2.0/bits/unique_ptr.h:188:11: error: no match for ‘operator=’ (operand types are ‘std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer’ {aka ‘TaggedPtr<StoredValue>’} and ‘std::nullptr_t’)
  188 |  _M_ptr() = nullptr;
      |  ~~~~~~~~~^~~~~~~~~
In file included from .../repo-master/kv_engine/engines/ep/src/blob.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/stored-value.h:20,
                 from .../repo-master/kv_engine/engines/ep/src/hash_table.h:21,
                 from .../repo-master/kv_engine/engines/ep/src/access_scanner.cc:22:
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(const TaggedPtr<StoredValue>&)’
   44 | class TaggedPtr : public TaggedPtrBase {
      |       ^~~~~~~~~
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘const TaggedPtr<StoredValue>&’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note: candidate: ‘constexpr TaggedPtr<StoredValue>& TaggedPtr<StoredValue>::operator=(TaggedPtr<StoredValue>&&)’
.../repo-master/kv_engine/engines/ep/src/tagged_ptr.h:44:7: note:   no known conversion for argument 1 from ‘std::nullptr_t’ to ‘TaggedPtr<StoredValue>&&’
make[4]: *** [kv_engine/engines/ep/CMakeFiles/ep_objs.dir/build.make:134: kv_engine/engines/ep/CMakeFiles/ep_objs.dir/src/access_scanner.cc.o] Error 1

Change-Id: I27e5492480661ccdba57d7bee5dcd24f8c0ce463

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Aliaksey Artamonau
Date: 2021-01-06 21:34:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Aliaksey Artamonau
Date: 2021-01-06 21:37:06.000000000
Message: 
Patch Set 1: Verified+1
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-06 21:46:34.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
Line:52, engines/ep/src/tagged_ptr.h -> Seems like the implementation of unique_ptr in GCC 10 has changed. I think we actually just want an explicit ctor from std::nullptr_t given this models unique_ptr (as per https://en.cppreference.com/w/cpp/memory/unique_ptr/unique_ptr) 

 constexpr unique_ptr( std::nullptr_t ) noexcept;

Any use of TaggedPtr with a non-null ptr should always have an explicit tag provided (hence why there isn't already an existing ctor from a raw ptr).

----------------------------------------------------------------------------------------------------------------------
Author: Aliaksey Artamonau
Date: 2021-01-06 22:13:34.000000000
Message: 
Patch Set 1:

@Dave, would you mind pushing the change yourself then? That's what I actually originally did, but I noticed that there's the "inefficient" TaggedPtr. And the latter actually had this version of the constructor. So I thought I'd be better for both of them to have identical interfaces.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-06 23:05:28.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32756/ : ABORTED

Compile error at /usr/include/c++/10.2.0/bits/unique_ptr.h:163:22:
error: no match for `operator=" (operand types are `std::__uniq_ptr_impl<StoredValue, TaggedPtrDeleter<StoredValue, StoredValue::Deleter> >::pointer" {aka `TaggedPtr<StoredValue>"} and `std::nullptr_t")
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32756/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7007/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7007/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4968/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6434/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28230/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8040/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8316/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7923/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15859/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-01-07 10:47:21.000000000
Message: 
Patch Set 1:

> Patch Set 1:
> 
> @Dave, would you mind pushing the change yourself then? That's what I actually originally did, but I noticed that there's the "inefficient" TaggedPtr. And the latter actually had this version of the constructor. So I thought I'd be better for both of them to have identical interfaces.

Yes, I can do that; hopefully will get to it this week.
----------------------------------------------------------------------------------------------------------------------
